--- a/foundry.toml
+++ b/foundry.toml
@@ -3,5 +3,8 @@ src = "src"
 out = "out"
 libs = ["lib"]
 evm_version = "cancun"
+remappings = [
+    "@openzeppelin/=lib/openzeppelin-contracts/"
+]
 
 # See more config options https://github.com/foundry-rs/foundry/blob/master/crates/config/README.md#all-options
