--- a/foundry.toml
+++ b/foundry.toml
@@ -3,6 +3,7 @@ src = "src"
 out = "out"
 libs = ["lib"]
 evm_version = "cancun"
+via_ir = true
 remappings = [
     "@openzeppelin/=lib/openzeppelin-contracts/"
 ]
